# jws

./: CMakeLists.txt  README.md
data/schemas/: address_schema_with_refs.json
examples/: CMakeLists.txt  validate_json.cpp
examples/documents/: example_document_bad.json
examples/schemas/: example_schema_with_refs.json
examples/validate_json/: example_document.json
include/jws/: json_with_schema.hpp
nlohmann/json-3.9.1/single_include/nlohmann/: json.hpp
pboettch/json-schema-validator-2.2.0/: .travis.yml  CMakeLists.txt
pboettch/json-schema-validator-2.2.0/src/: json-validator.cpp  smtp-address-validator.cpp
pboettch/json-schema-validator-ad9e992-modified/: CMakeLists.txt
pboettch/json-schema-validator-ad9e992-modified/src/: json-schema.hpp
pboettch/json-schema-validator-e1cef0b/: .travis.yml  nlohmann_json_schema_validatorConfig.cmake.in
pboettch/json-schema-validator-e1cef0b/src/: json-validator.cpp
src/: CMakeLists.txt
src/jws/: CMakeLists.txt
src/jws/include/jws/: json_with_schema.hpp
tests/: CMakeLists.txt  test_jws.cpp
